2010-10-18  Daniel Krieg  <krieg@fias.uni-frankfurt.de>

    * src/libYARP_OS/include/hmac/sha2.h
    * src/libYARP_OS/include/hmac/hmac_sha2.h
    * src/libYARP_OS/src/hmac_sha2.c
    * src/libYARP_OS/src/sha2.c
    * src/libYARP_OS/include/yarp/os/impl/AuthHMAC.h
    * src/libYARP_OS/src/AuthHMAC.cpp

    added a 3-way port authentication mechansim using 
    HMAC with SHA
    
    * src/libYARP_OS/include/yarp/os/impl/Face.h
    * src/libYARP_OS/src/TcpFace.cpp
    * src/libYARP_OS/CMakeLists.txt

    implemented in TcpFace; enable with cmake switch
    'USE_PORT_AUTHENTICATION'

2010-10-07  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/harness/ResourceFinderTest.cpp: test 
	for getContext method.

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: add
	getContext/getContexts methods to recover application
	context [thanks Ugo Pattacini]
	
2010-10-04  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/include/yarp/os/Bottle.h: the
	tail() of a null bottle should be the empty list
	[thanks Ugo Pattacini]

2010-09-24  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* conf/CMakeLists.txt: add some missing install files
	[thanks Florent D'Halluin]

2010-09-24  Marco Randazzo <marco.randazzo@iit.it>

	* src/libYARP_dev/src/AnalogSensorClient.cpp
	* src/libYARP_dev/include/yarp/dev/IAnalogSensor.h

	IAnalogSensor: added the two more methods to the IAnalogSensor interface:
	calibrateSensor(const double *value) and calibrateChannel(int ch).
	The calibration methods are now implemented in the AnalogSensorClient.cpp
	
2010-09-21  Marco Randazzo <marco.randazzo@iit.it>

	* src/libYARP_dev/src/AnalogSensorClient.cpp
	* src/libYARP_dev/include/yarp/dev/IAnalogSensor.h

	IAnalogSensor: added the two methods calibrateSensor(), calibrateChannel()

2010-09-21  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* conf/YarpVersion.cmake: bump version up to 2.3.1

	* conf/FindGSL.cmake: clean up license statement on this